# RuntimeGraphicsInfo

./: .gitignore  CMakeLists.txt  LICENSE  RuntimeGraphicsInfo.sln  appveyor.yml  package.json
Runtime/: RuntimeGraphicsInfo.cs  StrangeLoopGames.RuntimeGraphicsInfo.Runtime.asmdef
Runtime/Plugins/x86_64/: libRuntimeGraphicsInfoNative.dylib
RuntimeGraphicsInfo/: DirectX11.cpp  RuntimeGraphicsInfo.cs  RuntimeGraphicsInfo.vcxproj  RuntimeGraphicsInfo.vcxproj.filters  cpp.hint
RuntimeGraphicsInfo.Plugin/: CMakeLists.txt  DirectX11.cpp  Metal.cpp  Metal.mm  PlatformBase.h  RuntimeGraphicsInfo.Plugin.vcxproj  RuntimeGraphicsInfo.Plugin.vcxproj.filters  RuntimeGraphicsInfo.cpp  RuntimeGraphicsInfo.h  framework.h  package.json  pch.h
RuntimeGraphicsInfo.Plugin/PluginAPI/: IUnityGraphics.h  IUnityProfilerCallbacks.h
Scripts/: BuildUtils.ps1  UpdateRuntimesFromAppVeyor.ps1
